feat: add invoice and worker controller, repo, entity, service
